# ZorkClone

./: CMakeLists.txt  colors.hpp  commands.cpp  commands.hpp  log.cpp  log.hpp  main.cpp  parser.cpp  parser.hpp  types.hpp  world.cpp  world.hpp
zork/: ==Zork clone.==.md  Anomalies.md  Back door.md  Command.md  Doors.md  Entity.md  Help Command.md  Loop stack.md  Player.md  Room.md  old wooden chair.md  rusty nail..md
zork/.obsidian/: graph.json  workspace.json
zork/Main/: ==Zork clone.==.md  Anomalies.md  Entity.md  Loop.md  Player.md  mini games.md  tic toe mini-game.md
zork/Main/Commands/: Command.md  Commentary.md  Forward.md  Go.md  Help Command.md  Look.md  Player interactions.md
zork/Main/Items/: Chair.md  Note.md
zork/Main/Locations/: Cell.md  Center of room.md  Doors.md  Exit door.md  Front center.md  Front left corner.md  Left wall.md  Room.md
